Top 10 Movies List (Kemal)

--- a/skeleton.html
+++ b/skeleton.html
@@ -1,46 +1,70 @@
-AFI's 10 Greatest American Movies of all Time
-
-#
-MOVIE
-YEAR
-
-1
-CITIZEN KANE
-1941
-
-2
-CASABLANCA
-1942
-
-3
-THE GODFATHER
-1972
-
-4
-GONE WITH THE WIND
-1939
-
-5
-LAWRENCE OF ARABIA
-1962
-
-6
-THE WIZARD OF OZ
-1939
-
-7
-THE GRADUATE
-1967
-
-8
-ON THE WATERFRONT
-1954
-
-9
-SCHINDLER'S LIST
-1993
-
-10
-SINGIN' IN THE RAIN
-1952
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Fisrt Movie Table</title>
+  <link rel="stylesheet" type="text/css" href="mystylesheet.css" />
+ </head>
+  <body>
+  <h1>AFI's Top Ten 10 Greatest American Movies of All Time</h1>
+  </body>   <table style="border: 1px solid black;">
+    <thead>
+      <tr>
+        <th style="border: 1px solid black;">#</th>
+        <th style="border: 1px solid black;">movie</th>
+        <th style="border: 1px solid black;">year</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border: 1px solid black;">1</td>
+        <td style="border: 1px solid black;">CITIZEN KANE</td>
+        <td style="border: 1px solid black;">1941</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">2</td>
+        <td style="border: 1px solid black;">CASABLANCA</td>
+        <td style="border: 1px solid black;">1942</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">3</td>
+        <td style="border: 1px solid black;">THE GODFATHER</td>
+        <td style="border: 1px solid black;">1972</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">4</td>
+        <td style="border: 1px solid black;">GONE WITH THE WIND</td>
+        <td style="border: 1px solid black;">1939</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">5</td>
+        <td style="border: 1px solid black;">LAWRENCE OF ARABIA</td>
+        <td style="border: 1px solid black;">1962</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">6</td>
+        <td style="border: 1px solid black;">THE WIZARD OF OZ</td>
+        <td style="border: 1px solid black;">1939</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">7</td>
+        <td style="border: 1px solid black;">THE GRADUATE</td>
+        <td style="border: 1px solid black;">1967</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">8</td>
+        <td style="border: 1px solid black;">ON THE WATERFRONT</td>
+        <td style="border: 1px solid black;">1954</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">9</td>
+        <td style="border: 1px solid black;">SCHINDLER'S LIST</td>
+        <td style="border: 1px solid black;">1993</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;">10</td>
+        <td style="border: 1px solid black;">SINGIN' IN THE RAIN</td>
+        <td style="border: 1px solid black;">1952</td>
+      </tr>
+    </tbody>
+       
+  </table>
