Top 10 Movies (w/links to IMDb)

--- a/skeleton.html
+++ b/skeleton.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Fisrt Movie Table</title>
+  <title>My First Movie Table</title>
   <link rel="stylesheet" type="text/css" href="mystylesheet.css" />
  </head>
   <body>
   <h1>AFI's Top Ten 10 Greatest American Movies of All Time</h1>
-  </body>   <table style="border: 1px solid black;">
+  </body>   
+
+    <p>To view the IMDb page for any of the movies, just click on the title of the movie you'd like to view.</p>
+  <table style="border: 1px solid black;">
     <thead>
       <tr>
         <th style="border: 1px solid black;">#</th>
@@ -17,52 +20,82 @@
     <tbody>
       <tr>
         <td style="border: 1px solid black;">1</td>
-        <td style="border: 1px solid black;">CITIZEN KANE</td>
+        <td>
+          <a href="http://www.imdb.com/title/tt0033467/">
+          <div style="border: 1px solid black;">CITIZEN KANE</div></a>
+        </td>
         <td style="border: 1px solid black;">1941</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">2</td>
-        <td style="border: 1px solid black;">CASABLANCA</td>
+         <td>
+          <a href="http://www.imdb.com/title/tt0034583/">
+          <div style="border: 1px solid black;">CASABLANCA</div></a>
+        </td>
         <td style="border: 1px solid black;">1942</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">3</td>
-        <td style="border: 1px solid black;">THE GODFATHER</td>
+       <td>
+          <a href="http://www.imdb.com/title/tt0068646/">
+          <div style="border: 1px solid black;">THE GODFATHER</div></a>
+        </td>
         <td style="border: 1px solid black;">1972</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">4</td>
-        <td style="border: 1px solid black;">GONE WITH THE WIND</td>
+        <td>
+          <a href="http://www.imdb.com/title/tt0031381/">
+          <div style="border: 1px solid black;">GONE WITH THE WIND</div></a>
+        </td>
         <td style="border: 1px solid black;">1939</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">5</td>
-        <td style="border: 1px solid black;">LAWRENCE OF ARABIA</td>
+          <td>
+          <a href="http://www.imdb.com/title/tt0056172/">
+          <div style="border: 1px solid black;">LAWRENCE OF ARABIA</div></a>
+        </td>
         <td style="border: 1px solid black;">1962</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">6</td>
-        <td style="border: 1px solid black;">THE WIZARD OF OZ</td>
+         <td>
+          <a href="http://www.imdb.com/title/tt0032138/">
+          <div style="border: 1px solid black;">THE WIZARD OF OZ</div></a>
+        </td>
         <td style="border: 1px solid black;">1939</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">7</td>
-        <td style="border: 1px solid black;">THE GRADUATE</td>
+       <td>
+          <a href="http://www.imdb.com/title/tt0061722/">
+          <div style="border: 1px solid black;">THE GRADUATE</div></a>
+        </td>
         <td style="border: 1px solid black;">1967</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">8</td>
-        <td style="border: 1px solid black;">ON THE WATERFRONT</td>
+    <td>
+          <a href="http://www.imdb.com/title/tt0047296/">
+          <div style="border: 1px solid black;">ON THE WATERFRONT</div></a>
+        </td>
         <td style="border: 1px solid black;">1954</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">9</td>
-        <td style="border: 1px solid black;">SCHINDLER'S LIST</td>
+        <td>
+          <a href="http://www.imdb.com/title/tt0108052/">
+          <div style="border: 1px solid black;">SCHINDLER'S LIST</div></a>
+        </td>
         <td style="border: 1px solid black;">1993</td>
       </tr>
       <tr>
         <td style="border: 1px solid black;">10</td>
-        <td style="border: 1px solid black;">SINGIN' IN THE RAIN</td>
+       <td>
+          <a href="http://www.imdb.com/title/tt0045152/">
+          <div style="border: 1px solid black;">SINGIN' IN THE RAIN</div></a>
+        </td>
         <td style="border: 1px solid black;">1952</td>
       </tr>
     </tbody>
